V1 Resideño del sitio
22-OCT-2020

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Ritdi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- BOOTSTRAP MATERIAL -->
+  <link rel="stylesheet" href="./assets/librerias/bootstrap-material/style.css">
+  <!-- ANIMATE CSS  -->
+  <link rel="stylesheet" href="./assets/librerias/animate/animate.css">
 </head>
 <body>
   <app-root></app-root>
 </body>
+
+    <script src="./assets/librerias/poper/poper.js"></script>
+    <script src="./assets/librerias/jquery/jquery.js"></script>
+    <script src="./assets/librerias/snackbar/snackbar.js"></script>
+    <script src="./assets/librerias/bootstrap-material/custom.js"></script>
+    <script src="./assets/librerias/bootstrap-material/start.js"></script>
+
+    <noscript>Debe activar JavaScript en su navegador para usar esta aplicación.</noscript>
 </html>
