Cambios de producción

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Dritdi</title>
@@ -10,16 +11,18 @@
   <link rel="stylesheet" href="./assets/librerias/bootstrap-material/style.css">
   <!-- ANIMATE CSS  -->
   <link rel="stylesheet" href="./assets/librerias/animate/animate.css">
+  <link rel="stylesheet" href="./assets/vendor/flagiconcss3/css/flag-icon.min.css">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+<script src="./assets/librerias/poper/poper.js"></script>
+<script src="./assets/librerias/jquery/jquery.js"></script>
+<script src="./assets/librerias/snackbar/snackbar.js"></script>
+<script src="./assets/librerias/bootstrap-material/custom.js"></script>
+<script src="./assets/librerias/bootstrap-material/start.js"></script>
 
-    <script src="./assets/librerias/poper/poper.js"></script>
-    <script src="./assets/librerias/jquery/jquery.js"></script>
-    <script src="./assets/librerias/snackbar/snackbar.js"></script>
-    <script src="./assets/librerias/bootstrap-material/custom.js"></script>
-    <script src="./assets/librerias/bootstrap-material/start.js"></script>
+<noscript>Debe activar JavaScript en su navegador para usar esta aplicación.</noscript>
 
-    <noscript>Debe activar JavaScript en su navegador para usar esta aplicación.</noscript>
 </html>
